--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+#Emacs Backup Files
+*~
+
+#Config files
+config.php
+config.js
+config.sh
