Tweaked settings for phpBB install

--- a/forum-theme/kib/style.cfg
+++ b/forum-theme/kib/style.cfg
@@ -18,6 +18,6 @@
 
 # General Information about this style
 name = kib
-copyright = &copy; 2013 Lacey Sutton (http://www.dinosaurfact.net)
-version = 1.0.1
+copyright = Konfliktspel i borlange
+version = 1.0.0
 #phpBB Version = 3.0.11
