--- a/pageroot/bower.json
+++ b/pageroot/bower.json
@@ -25,5 +25,8 @@
     "eonasdan-bootstrap-datetimepicker": "~4.0.0",
     "angular-ckeditor": "~0.3.2",
     "angular-file-upload": "~1.1.5"
+  },
+  "resolutions": {
+    "angular": "1.3.12"
   }
 }
