--- a/pageroot/bower.json
+++ b/pageroot/bower.json
@@ -19,14 +19,14 @@
     "bootstrap": "~3.3.2",
     "jquery": "~2.1.3",
     "angular-moment": "~0.9.0",
-    "angucomplete": "*",
     "angular-carousel": "~0.3.9",
     "fullcalendar": "~2.2.6",
     "eonasdan-bootstrap-datetimepicker": "~4.0.0",
     "angular-ckeditor": "~0.3.2",
-    "angular-file-upload": "~1.1.5"
+    "angular-file-upload": "~1.1.5",
+    "angucomplete-alt": "~0.0.37"
   },
   "resolutions": {
-    "angular": "1.3.12"
+    "angular": "1.3.13"
   }
 }
