--- a/pageroot/bower.json
+++ b/pageroot/bower.json
@@ -24,7 +24,8 @@
     "eonasdan-bootstrap-datetimepicker": "~4.0.0",
     "angular-ckeditor": "~0.3.2",
     "angular-file-upload": "~1.1.5",
-    "angucomplete-alt": "~0.0.37"
+    "angucomplete-alt": "~0.0.37",
+    "angular-bootstrap": "~0.13.0"
   },
   "resolutions": {
     "angular": "1.3.13"
