--- a/pageroot/bower.json
+++ b/pageroot/bower.json
@@ -18,12 +18,14 @@
     "angular-ckeditor": "~0.3.2",
     "angular-file-upload": "~1.1.5",
     "angucomplete-alt": "~0.0.37",
+    "angular-ui-calendar": "~1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
   },
   "resolutions": {
     "jquery": "~2.1.1",
-    "angular": "~1.3.4"
+    "angular": "1.3.17",
+    "fullcalendar": "~2.2.6"
   }
 }
