--- a/pageroot/.yo-rc.json
+++ b/pageroot/.yo-rc.json
@@ -1,9 +1,34 @@
 {
   "generator-gulp-angular": {
-    "version": "0.11.0",
+    "version": "1.0.0",
     "props": {
-      "angularVersion": "~1.3.4",
-      "angularModules": [],
+      "angularVersion": "~1.4.2",
+      "angularModules": [
+        {
+          "key": "animate",
+          "module": "ngAnimate"
+        },
+        {
+          "key": "cookies",
+          "module": "ngCookies"
+        },
+        {
+          "key": "touch",
+          "module": "ngTouch"
+        },
+        {
+          "key": "sanitize",
+          "module": "ngSanitize"
+        },
+        {
+          "key": "messages",
+          "module": "ngMessages"
+        },
+        {
+          "key": "aria",
+          "module": "ngAria"
+        }
+      ],
       "jQuery": {
         "key": "jquery2"
       },
@@ -28,12 +53,12 @@
         "extension": "scss"
       },
       "jsPreprocessor": {
-        "key": "none",
+        "key": "noJsPrepro",
         "extension": "js",
         "srcExtension": "js"
       },
       "htmlPreprocessor": {
-        "key": "none",
+        "key": "noHtmlPrepro",
         "extension": "html"
       },
       "foundationComponents": {
