--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
    - openssl aes-256-cbc -K $encrypted_b9fecb801bae_key -iv $encrypted_b9fecb801bae_iv -in ci/keys.tar.enc -out ci/keys.tar -d
    
 install:
-   - cd Page
+   - cd pageroot
    - npm install -g gulp bower
    - npm install
    - bower install
@@ -27,4 +27,4 @@ after_success:
    - cd ../ci
    - chmod +x deploy.sh
    - ./deploy.sh
-   - ssh -i id_rsa kib@konfliktspeliborlange.se "/bin/sh post-deploy.sh"
+   - ssh -i id_rsa -oStrictHostKeyChecking=no kib@konfliktspeliborlange.se "/bin/sh post-deploy.sh"
