--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ branches:
 
 notifications:
    email:
-      on_success: change
+      on_success: always
       on_failure: always
 
 language: node_js
