--- a/forum-theme/kib/style.cfg
+++ b/forum-theme/kib/style.cfg
@@ -1,23 +1,13 @@
-#
-# phpBB Style Configuration File
-#
-# @package phpBB3
-# @copyright (c) 2005 phpBB Group
-# @license http://opensource.org/licenses/gpl-license.php GNU Public License
-#
-#
-# At the left is the name, please do not change this
-# At the right the value is entered
-# For on/off options the valid values are on, off, 1, 0, true and false
-#
-# Values get trimmed, if you want to add a space in front or at the end of
-# the value, then enclose the value with single or double quotes.
-# Single and double quotes do not need to be escaped.
-#
-#
 
 # General Information about this style
 name = kib
-copyright = Konfliktspel i borlange
-version = 1.0.0
-#phpBB Version = 3.0.11
+copyright = Konfliktspel i borlänge
+style_version = 3.2.0-b2
+phpbb_version = 3.2.0-b2
+
+# Defining a different template bitfield
+# template_bitfield = lNg=
+
+# Parent style
+# Set value to empty or to this style's name if this style does not have a parent style
+parent = prosilver
